vlib/v/checker/tests/unwrap_optional_function_argument_err.vv
fn opt() ?string {
	return "V"
}

fn make(s string) {
	println("Making '${s}'")
}

fn main() {
	make(opt()?)
}
